--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 authors = ["Wayne Nilsen <waynenilsen@gmail.com>"]
 name = "handlebars-markdown-helper"
-version = "0.1.0"
+version = "0.1.1"
+description = "A helper for handlebars that adds markdown renedring"
+license = "MIT"
+homepage = "https://github.com/waynenilsen/handlebars-markdown-helper"
 
 [dependencies]
 handlebars = "0.11.3"
