--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["Wayne Nilsen <waynenilsen@gmail.com>"]
 name = "handlebars-markdown-helper"
 version = "0.1.2"
-description = "A helper for handlebars that adds markdown renedring"
+description = "A helper for handlebars that adds markdown rendering"
 license = "MIT"
 homepage = "https://github.com/waynenilsen/handlebars-markdown-helper"
 readme = "README.md"
