--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ readme = "README.md"
 keywords = ["handlebars", "templating", "template", "markdown", "web"]
 
 [dependencies]
-handlebars = "0.11.3"
+handlebars = "^0.17.0"
 pulldown-cmark = "0.0.3"
